Feat: Initial Snake

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -4,6 +4,7 @@
 
 // Custom Font
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
 
 @layer utilities {
   html {
